# rules_release_file

./: BUILD.bazel  WORKSPACE
internal/: BUILD.bazel  release.bzl
internal/go/cmd/stamper/: BUILD.bazel  stamper.go
internal/go/pkg/utils/: BUILD.bazel
release_file/: deps.bzl  repositories.bzl
